# libgwater

./: .gitignore  README.md  alsa-mixer.mk  libgwater.m4  meson.build  mpd.mk  nl.mk  template.mk  wayland-server.mk  wayland.mk  win.mk  xcb.mk
alsa-mixer/: libgwater-alsa-mixer.c  libgwater-alsa-mixer.h  meson.build
mpd/: libgwater-mpd.c  libgwater-mpd.h  meson.build
nl/: libgwater-nl.c  libgwater-nl.h  meson.build
wayland/: libgwater-wayland.c  libgwater-wayland.h  libwayland-glib-source.c  libwayland-glib.h  meson.build
wayland-server/: libgwater-wayland-server.c  libgwater-wayland-server.h  meson.build
win/: libgwater-win.c  libgwater-win.h  meson.build
xcb/: libgwater-xcb.c  libgwater-xcb.h  libxcb-glib-source.c  libxcb-glib.h  meson.build
